<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="tw.com.frankchang.houli.classno_06_bmi.MainActivity"
    android:orientation="vertical"
    android:padding="@dimen/dp_16">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/Height"
            android:textSize="@dimen/TextSize"
            android:textColor="@color/Blue"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:text="TextView"
            android:textSize="@dimen/TextSize"
            android:textColor="@color/Red"
            android:gravity="center_horizontal"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dp_10">

        <TextView
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/Weight"
            android:textSize="@dimen/TextSize"
            android:textColor="@color/Blue"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:text="TextView"
            android:textSize="@dimen/TextSize"
            android:textColor="@color/Red"
            android:gravity="center_horizontal"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dp_10">

        <TextView
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/BMI"
            android:textSize="@dimen/TextSize"
            android:textColor="@color/Red"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:text="TextView"
            android:textColor="@color/Red"
            android:textSize="@dimen/TextSize"
            android:gravity="center_horizontal"/>
    </LinearLayout>

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/back"
        android:layout_marginTop="@dimen/dp_10"/>
</LinearLayout>
